header: fix to stretch full width

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -19,6 +19,10 @@ body{
 	}
 }
 
+.header-col{
+	width:100%;
+}
+
 /* tab styles */
 ul.tab-bar{
 	display:flex;
